src/components/_hr.scss
// Delimiter
//
// @group Components
hr {
	box-sizing: border-box;
	&.--hrX {
		@include extend-viewports-classes(true, $viewports) {
			// max-height: 2px;
			height: 2px;
			width: 100%;
			&:not([class*="--m"]) {
				width: calc(100% + 1rem);
				margin: 0 -0.5rem;
			}

			// Tema del delimitador
			//
			// @group Modifiers
			&.--tm-dark7 {
				background-image: url("#{$ruleSvgPathX}#{str-replace(#{$dark}, '#')}' opacity='0.7#{$ruleSvgPathEnd}");
			}
			&.--tm-primary {
				background-image: url("#{$ruleSvgPathX}#{str-replace(#{$primary}, '#')}#{$ruleSvgPathEnd}");
			}
			&.--tm-primaryAlt {
				background-image: url("#{$ruleSvgPathX}#{str-replace(#{$primaryAlt}, '#')}#{$ruleSvgPathEnd}");
			}
			&.--tm-danger {
				background-image: url("#{$ruleSvgPathX}#{str-replace(#{$danger}, '#')}#{$ruleSvgPathEnd}");
			}
			&.--tm-success {
				background-image: url("#{$ruleSvgPathX}#{str-replace(#{$success}, '#')}#{$ruleSvgPathEnd}");
			}
			// default theme
			&:not([class*="-tm"]),
			&.--tm-secondary {
				background-image: url("#{$ruleSvgPathX}#{str-replace(#{$secondary}, '#')}#{$ruleSvgPathEnd}");
			}
		}
	}
	&.--hrY {
		@include extend-viewports-classes(true, $viewports) {
			// max-width: 2px;
			width: 2px;
			height: 100%;
			&:not([class*="--m"]) {
				height: calc(100% + 1rem);
				margin: -0.5rem 0;
			}

			// Tema del delimitador
			//
			// @group Modifiers
			&.--tm-dark7 {
				background-image: url("#{$ruleSvgPathY}#{str-replace(#{$dark}, '#')}' opacity='0.7#{$ruleSvgPathEnd}");
			}
			&.--tm-primary {
				background-image: url("#{$ruleSvgPathY}#{str-replace(#{$primary}, '#')}#{$ruleSvgPathEnd}");
			}
			&.--tm-primaryAlt {
				background-image: url("#{$ruleSvgPathY}#{str-replace(#{$primaryAlt}, '#')}#{$ruleSvgPathEnd}");
			}
			&.--tm-danger {
				background-image: url("#{$ruleSvgPathY}#{str-replace(#{$danger}, '#')}#{$ruleSvgPathEnd}");
			}
			&.--tm-success {
				background-image: url("#{$ruleSvgPathY}#{str-replace(#{$success}, '#')}#{$ruleSvgPathEnd}");
			}
			// default theme
			&:not([class*="-tm"]),
			&.--tm-secondary {
				background-image: url("#{$ruleSvgPathY}#{str-replace(#{$secondary}, '#')}#{$ruleSvgPathEnd}");
			}
		}
	}
	&.--hrX,
	&.--hrY {
		@include extend-viewports-classes(true, $viewports) {
			opacity: 0.2;
			background-repeat: round;
			background-position: 50% 50%;
			flex: 0 0 auto;
			display: block;
			&:last-child:not(:nth-child(2)):not(:only-child) {
				display: none;
			}
		}
	}
	// default: horizontal
	&:not([id]):not([class]) {
		// max-height: 2px;
		width: calc(100% + 1rem);
		height: 2px;
		margin-left: -0.5rem;
		margin-right: -0.5rem;
		opacity: 0.2;
		background-repeat: round;
		background-position: 50% 50%;
		flex: 0 0 auto;
		background-image: url("#{$ruleSvgPathX}#{str-replace(#{$secondary}, '#')}#{$ruleSvgPathEnd}");
		display: block;
		&:last-child:not(:nth-child(2)):not(:only-child) {
			display: none;
		}
	}
}

